--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="script.js" async defer></script>
   </head>
   <body>
+    <h1>Tic-Tac-Toe</h1>
     <div class="main-board">
       <div class="column">
         <div class="cell"></div>
@@ -18,8 +19,8 @@
         <div class="cell"></div>
       </div>
       <div class="column">
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">X</div>
+        <div class="cell">O</div>
         <div class="cell"></div>
       </div>
       <div class="column">
