checking what player can place

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="cell"></div>
       </div>
       <div class="column">
-        <div class="cell">X</div>
-        <div class="cell">O</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell"></div>
       </div>
       <div class="column">
