--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <body>
     <h1>Tic-Tac-Toe</h1>
     <div class="main-board">
-      <div class="column">
+      <div class="column" id="0">
         <div class="cell" id="0"></div>
         <div class="cell" id="1"></div>
         <div class="cell" id="2"></div>
       </div>
-      <div class="column">
+      <div class="column" id="1">
         <div class="cell" id="3"></div>
         <div class="cell" id="4"></div>
         <div class="cell" id="5"></div>
       </div>
-      <div class="column">
+      <div class="column" id="2">
         <div class="cell" id="6"></div>
         <div class="cell" id="7"></div>
         <div class="cell" id="8"></div>
