--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <div class="cell" id="2/2"></div>
       </div>
     </div>
+    <div class="win-screen">Player 1 won!</div>
   </body>
 </html>
