--- a/index.html
+++ b/index.html
@@ -11,24 +11,30 @@
     <script src="script.js" async defer></script>
   </head>
   <body>
-    <h1>Tic-Tac-Toe</h1>
-    <div class="main-board">
-      <div class="column" id="0">
-        <div class="cell" id="0/0"></div>
-        <div class="cell" id="1/0"></div>
-        <div class="cell" id="2/0"></div>
+    <div class="main-container">
+      <h1>Tic-Tac-Toe</h1>
+      <div class="main-board">
+        <div class="column" id="0">
+          <div class="cell" id="0/0"></div>
+          <div class="cell" id="1/0"></div>
+          <div class="cell" id="2/0"></div>
+        </div>
+        <div class="column" id="1">
+          <div class="cell" id="0/1"></div>
+          <div class="cell" id="1/1"></div>
+          <div class="cell" id="2/1"></div>
+        </div>
+        <div class="column" id="2">
+          <div class="cell" id="0/2"></div>
+          <div class="cell" id="1/2"></div>
+          <div class="cell" id="2/2"></div>
+        </div>
       </div>
-      <div class="column" id="1">
-        <div class="cell" id="0/1"></div>
-        <div class="cell" id="1/1"></div>
-        <div class="cell" id="2/1"></div>
+      <div class="control-buttons">
+        <button class="">Hi</button>
+        <button>Hi</button>
       </div>
-      <div class="column" id="2">
-        <div class="cell" id="0/2"></div>
-        <div class="cell" id="1/2"></div>
-        <div class="cell" id="2/2"></div>
-      </div>
+      <div class="win-screen"></div>
     </div>
-    <div class="win-screen"></div>
   </body>
 </html>
