--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
       </div>
       <div class="control-buttons">
-        <button class="">Hi</button>
-        <button>Hi</button>
+        <button class="control-button" id="settings">SETTINGS</button>
+        <button class="control-button" id="clear">CLEAR</button>
       </div>
       <div class="win-screen"></div>
     </div>
