added dialog and button to dom fucntion

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <button class="control-button" id="settings">SETTINGS</button>
         <button class="control-button" id="clear">CLEAR</button>
       </div>
-      <div class="win-screen"></div>
     </div>
+    <div class="win-screen"></div>
+
+    <dialog class="settings_dialog"></dialog>
   </body>
 </html>
