--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     </div>
     <div class="win-screen"></div>
 
-    <dialog class="settings_dialog"></dialog>
+    <dialog class="settings_dialog">
+      <div class="input-dialog">
+        <label for="player_1"> Player 1:</label>
+        <input type="text" name="player_1" id="" />
+      </div>
+      <div class="input-dialog">
+        <label for="player_2"> Player 2:</label>
+        <input type="text" name="player_2" id="" />
+      </div>
+    </dialog>
   </body>
 </html>
