added styling to dialog

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <dialog class="settings_dialog">
       <div class="input-dialog">
         <label for="player_1"> Player 1:</label>
-        <input type="text" name="player_1" id="" />
+        <input type="text" name="player_1" id="" placeholder="Player-1 Name" />
       </div>
       <div class="input-dialog">
         <label for="player_2"> Player 2:</label>
-        <input type="text" name="player_2" id="" />
+        <input type="text" name="player_2" id="" placeholder="Player-2 Name" />
       </div>
     </dialog>
   </body>
