added form and save button

--- a/index.html
+++ b/index.html
@@ -38,14 +38,29 @@
     <div class="win-screen"></div>
 
     <dialog class="settings_dialog">
-      <div class="input-dialog">
-        <label for="player_1"> Player 1:</label>
-        <input type="text" name="player_1" id="" placeholder="Player-1 Name" />
-      </div>
-      <div class="input-dialog">
-        <label for="player_2"> Player 2:</label>
-        <input type="text" name="player_2" id="" placeholder="Player-2 Name" />
-      </div>
+      <form method="dialog" class="dialog-form">
+        <div class="input-dialog">
+          <label for="player_1"> Player 1:</label>
+          <input
+            type="text"
+            name="player_1"
+            id=""
+            placeholder="Player-1 Name"
+            required
+          />
+        </div>
+        <div class="input-dialog">
+          <label for="player_2"> Player 2:</label>
+          <input
+            type="text"
+            name="player_2"
+            id=""
+            placeholder="Player-2 Name"
+            required
+          />
+        </div>
+        <button class="save-form">SAVE</button>
+      </form>
     </dialog>
   </body>
 </html>
