--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <dialog class="settings_dialog">
       <form method="dialog" class="dialog-form">
         <div class="input-dialog">
-          <label for="player_1"> Player 1:</label>
+          <label for="player_1"> Player 1 (X):</label>
           <input
             type="text"
             name="player_1"
@@ -50,7 +50,7 @@
           />
         </div>
         <div class="input-dialog">
-          <label for="player_2"> Player 2:</label>
+          <label for="player_2"> Player 2 (O):</label>
           <input
             type="text"
             name="player_2"
