added getPlayerNames function

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             id=""
             placeholder="Player-1 Name"
             required
+            class="player-1-class"
           />
         </div>
         <div class="input-dialog">
@@ -57,6 +58,7 @@
             id=""
             placeholder="Player-2 Name"
             required
+            class="player-2-class"
           />
         </div>
         <button class="save-form">SAVE</button>
